--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,29 +40,29 @@ dependencies {
     implementation 'androidx.core:core:1.2.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
 
-//    testImplementation 'junit:junit:4.13'
-//    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-//
-//    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-////    androidTestImplementation 'com.android.support.test:rules:1.0.2'
-////    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-//
-//    androidTestImplementation 'androidx.test:runner:1.1.0'
-//    androidTestImplementation 'androidx.test:rules:1.1.0'
-//
-//    androidTestImplementation "androidx.test.espresso:espresso-contrib:3.2.0"
-//    implementation "androidx.test.espresso:espresso-idling-resource:3.2.0"
-//    androidTestImplementation "androidx.test.ext:junit-ktx:1.1.1"
-//
-////    androidTestImplementation "io.cucumber:cucumber-android:x.x.x"
-//    androidTestImplementation 'info.cukes:cucumber-android:1.2.5'
-//    androidTestImplementation 'info.cukes:cucumber-picocontainer:1.2.5'
-//    androidTestImplementation 'com.android.support:support-annotations:28.0.0'
-//    androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
-//
-//
-//    testImplementation "org.robolectric:robolectric:4.3.1"
-////    testImplementation 'org.mockito:mockito-core:1.10.19'
+    testImplementation 'junit:junit:4.13'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+//    androidTestImplementation 'com.android.support.test:rules:1.0.2'
+//    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+
+    androidTestImplementation 'androidx.test:runner:1.1.0'
+    androidTestImplementation 'androidx.test:rules:1.1.0'
+
+    androidTestImplementation "androidx.test.espresso:espresso-contrib:3.2.0"
+    implementation "androidx.test.espresso:espresso-idling-resource:3.2.0"
+    androidTestImplementation "androidx.test.ext:junit-ktx:1.1.1"
+
+//    androidTestImplementation "io.cucumber:cucumber-android:x.x.x"
+    androidTestImplementation 'info.cukes:cucumber-android:1.2.5'
+    androidTestImplementation 'info.cukes:cucumber-picocontainer:1.2.5'
+    androidTestImplementation 'com.android.support:support-annotations:28.0.0'
+    androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
+
+
+    testImplementation "org.robolectric:robolectric:4.3.1"
+//    testImplementation 'org.mockito:mockito-core:1.10.19'
 
 
 
